update to Elasticsearch 7.6.1